<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark"
    tools:context=".activity.SignInCodeActivity"
    android:baselineAligned="false"
    android:id="@+id/theme_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:gravity="center">

                <androidx.nemosofts.material.ImageHelperView
                    app:hv_corner_radius="@dimen/_5sdp"
                    android:src="@drawable/logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/rl_vpn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:background="@drawable/focused_btn_ui_selector"
                        android:nextFocusRight="@id/et_any_name"
                        android:layout_marginEnd="@dimen/_5sdp">

                        <ImageView
                            android:id="@id/iv_logo_3"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/ic_vpn"
                            android:contentDescription="@string/todo"
                            app:tint="?ns_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:layout_toEndOf="@+id/iv_logo_3"
                            android:text="@string/connect_vpn"
                            android:textColor="?ns_black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_list_users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:background="@drawable/focused_btn_ui_selector"
                        android:nextFocusRight="@id/et_any_name">

                        <ImageView
                            android:id="@id/iv_logo_3"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/ic_shield_user"
                            android:contentDescription="@string/todo"
                            app:tint="?ns_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:layout_toEndOf="@+id/iv_logo_3"
                            android:text="@string/list_users"
                            android:textColor="?ns_black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_card_sub"
                android:backgroundTint="?ns_title"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/enter_activation_details"
                    android:textAlignment="viewStart"
                    android:textColor="?ns_title"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_keyhole"
                        app:tint="?ns_white" />

                    <View
                        android:background="#23FFFFFF"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/et_activation_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:background="@drawable/focused_edit_text"
                        android:hint="@string/activation_code"
                        android:imeOptions="actionDone|flagNoFullscreen"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/_5sdp"
                        android:textAlignment="viewStart"
                        android:textColor="?ns_white"
                        android:textColorHint="?ns_title_sub"
                        android:textSize="@dimen/_10ssp"
                        android:nextFocusDown="@+id/ll_btn_add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_add"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/focused_btn_danger"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:nextFocusUp="@+id/et_activation_code">

                    <ImageView
                        android:id="@+id/iv_add"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_8sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_keyhole"
                        app:tint="?ns_white"
                        android:contentDescription="@string/todo"/>

                    <ProgressBar
                        android:id="@+id/pb_add"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_6sdp"
                        android:indeterminate="true"
                        android:indeterminateTint="?ns_white"
                        android:visibility="gone"/>

                    <TextView
                        android:text="@string/activation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?ns_white"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginEnd="@dimen/_10sdp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>